--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,10 +2,8 @@
 layout: default
 ---
 
-<div class="page-header">
-    <h2>{{ page.title }}
-        {% if page.subtitle %}<small>{{ page.subtitle }}</small>{% endif %}
-    </h2>
+<div class="row">
+    <div class="small-12 columns">
+        {{ content }}
+    </div>
 </div>
-
-{{ content }}
