--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,65 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="noTouchDevice">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width">
 
-        <title>{% if page.title %} : {{ page.title }}{% endif %}{{ site.title }}</title>
+        <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
         <meta name="description" content="{{ site.subtitle }}">
 
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
-        
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/github.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/mm.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/theme.css">        
     </head>
     <body>
+        <div id="wrapper">
+            {% include header.html %}
 
-        <div class="container">
-            <div class="row">
-                <div id="header" class="col-sm-12">
-                    {% include header.html %}
+            <div id="content">
+                <div class="row">
+                    {% assign post_count = site.posts|size %}
+
+                    {% if site.navigation != 0 and site.navigation == 1 or post_count > 0 %}
+                        <div class="large-3 columns">
+                            {% include navigation.html %}
+                        </div>
+                        <div class="large-9 columns">
+                            {{ content }}
+                        </div>
+                    {% else %}
+                        <div class="large-12 columns">
+                            {{ content }}
+                        </div>
+                    {% endif %}
                 </div>
             </div>
 
-            <div class="row">
-                {% assign post_count = site.posts|size %}
-
-                {% if site.navigation != 0 and site.navigation == 1 or post_count > 0 %}
-                    <div id="navigation" class="col-sm-2">
-                        {% include navigation.html %}
-                    </div>
-                    <div id="content" class="col-sm-10">
-                        {{ content }}
-                    </div>
-                {% else %}
-                    <div id="content" class="col-sm-12">
-                        {{ content }}
-                    </div>
-                {% endif %}
-
-            </div>
-
-            {% if page.disqus == 1 %}
-            <div class="row">
-              {% if site.navigation == 1 or post_count > 0 %}
-                <div id="navigation" class="col-sm-2"></div>
-                <div id="disqus" class="col-sm-10">
-                    {% include disqus.html %}
-                </div>
-              {% else %}
-                <div id="disqus" class="col-sm-12">
-                    {% include disqus.html %}
-                </div>
-              {% endif %}
-            </div>
-            {% endif %}
-
-            <div class="row">
-                <div id="footer" class="col-sm-12">
-                    {% include footer.html %}
-                </div>
-            </div>
+            {% include footer.html %}
         </div>
+
+        {% include navorder.html %}
     </body>
 </html>
