Added missed tags for favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,9 @@
         <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
         <meta name="description" content="{{ site.subtitle }}">
 
+        <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.png"> 
+        <link rel="apple-itouch-icon" href="{{ site.baseurl }}/favicon.png"> 
+
         <link rel="stylesheet" href="{{ site.baseurl }}/css/github.css">
         <link rel="stylesheet" href="{{ site.baseurl }}/css/mm.css">
         <link rel="stylesheet" href="{{ site.baseurl }}/css/theme.css">        
