--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,11 @@
                 <strong>© 2013 - 2015 modmore</strong>, a brand by <a href="https://www.markhamstra.com/" title="Mark Hamstra Web Development">Mark Hamstra</a> 
                 • Designed by <a href="http://chsmedien.com/?pk_campaign=modmore&amp;pk_kwd=footerLink" title="chsmedien - Digital Marketing Agency &amp; MODX Professional Partner" target="_blank">chsmedien</a>
             </p>
-            <p><small>Work on documentation – <a href="http://klimchuk.com" target="_blank">Ivan Klimchuk</a>.</small></p>
+            <p>
+                <small>Work on original documentation – <a href="http://modmore.com" target="_blank"><strong>Mark Hamstra</strong></a>,</small>
+                <small>Work on site – <a href="http://klimchuk.com" target="_blank"><strong>Ivan Klimchuk</strong></a></small>, 
+                <small>Перевод на русский – <a href="http://klimchuk.by" target="_blank"><strong>Иван Климчук</strong></a>.</small> 
+            </p>
         </div>
     </div>
 </footer>
